# cybersec-bootcamp

./: README.MD
arachnida/: README.md  scorpion  spider
corsair/: Makefile  README.md  corsair.c  corsair.h
extraction/: README.md  extraction.py
ft_blockchain/: README.md  ft_blockchain.py
ft_blockchain/templates/: index.html
ft_onion/: README.MD  index.html  process.html
ft_onion/config/: sshd_config
ft_onion/css/: index.css  main.css  process.css
ft_otp/: README.md  ft_otp.py  key.hex
inquisitor/: README.MD  inquisitor.py
inquisitor/env/: docker-compose.yaml
irondome/: README.MD  irondome.py
irondome/Docker/: Dockerfile  docker-compose.yml  sshd_config
python_module_00/ex00/: answers.txt  requirements.txt
python_module_00/ex01/: exec.py
python_module_00/ex02/: whois.py
python_module_00/ex03/: count.py
python_module_00/ex04/: operations.py
python_module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
python_module_00/ex06/: recipe.py
python_module_00/ex07/: filterwords.py
python_module_00/ex08/: sos.py
python_module_00/ex09/: guess.py
python_module_00/ex10/: test.py
python_module_01/ex00/: book.py  recipe.py  (+1 more)
python_module_02/ex04/: LICENSE.md  README.md  build.sh  pyproject.toml  setup.cfg  setup.py
python_module_02/ex04/src/my_minipack/: __init__.py  loading.py
python_module_02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
recovery/: README.MD  recovery.py
stockholm/: README.MD  stockholm.py
tsunami/: README.MD  shellcode.c  tsunami.c  vulnerable.c
vaccine/: README.md  vaccine.py
(+14 files in other folders)
