[metadata]
name = my_minipack
version = 1.0.0
author = lguisado
author_email = lguisado@student.42malaga.com
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Bug Tracker = package issues url
classifiers =
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
package_dir = my_minipack
packages = find:
python_requires = >=3.7

[options.packages.find]
where = ./src/my_minipack